--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,32 @@
-#main{
+body {
+    font-family: Arial, Verdana, Calibri;
+}
+
+header {
+
+}
+
+nav {
+    background-color: #FFFF23;
+    margin: 0;
+    padding: 5px;
+}
+
+section {
+
+}
+
+footer {
+    background-color: #555555;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 5px;
+}
+
+h1 {
+
+}
+
+#main {
 
 }
